[package]
name = "tiny_yolo_v3_zynq-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
image = "0.24.7"
imageproc = "0.23.0"
log = "0.4.20"
rusttype = "0.9.3"
serde_json = "1.0.108"
xipdriver-rs = { git = "https://github.com/nu-slab/xipdriver-rs.git", version = "0.2.0" }

[dev-dependencies]
v4l = "0.14.0"
