[package]
name = "yolo_v3_tiny_zynq"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
image = "0.24.7"
imageproc = "0.23.0"
rusttype = "0.9.3"
xipdriver-rs = { git = "https://github.com/nu-slab/xipdriver-rs.git", version = "0.2.0" }

[dev-dependencies]
v4l = "0.14.0"
